# iitb-app

./: README.md
.github/workflows/: ci.yml
backend/: .gitignore  main.py  pyproject.toml
backend/.github/workflows/: ci.yml
backend/app/api/: deps.py
backend/app/api/v1/: schemas.py
backend/app/api/v1/endpoints/: courses.py  courses_by_department.json
backend/app/core/: config.py
backend/app/crud/: crud_course.py
backend/app/db/: session.py
backend/app/services/: course_scraper.py  course_uploader.py  department_course_scraper.py
backend/tests/: conftest.py
backend/tests/api/v1/: test_courses.py  test_schemas.py
backend/tests/crud/: test_crud_course.py
frontend/: .gitignore
