[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Raj Mall",email = "rajmall.0206@gmail.com"}
]
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "firebase-admin (>=7.1.0,<8.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
